kubernetes/createbuckets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: createbuckets
  name: createbuckets
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: createbuckets
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/sail: "true"
        io.kompose.service: createbuckets
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - ' /usr/bin/mc config host add myminio http://minio:9000 sail password; /usr/bin/mc rm -r --force myminio/uploads; /usr/bin/mc mb myminio/uploads; /usr/bin/mc policy set public myminio/uploads; exit 0; '
          image: minio/mc
          name: createbuckets
          resources: {}
      restartPolicy: Always
status: {}
