kubernetes/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/sail: "true"
        io.kompose.service: minio
    spec:
      containers:
        - args:
            - minio
            - server
            - /data/minio
            - --console-address
            - :8900
          image: minio/minio:latest
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:9000/minio/health/live
            failureThreshold: 3
            timeoutSeconds: 5
          name: minio
          ports:
            - containerPort: 9000
            - containerPort: 8900
          resources: {}
          volumeMounts:
            - mountPath: /data/minio
              name: sail-minio
      restartPolicy: Always
      volumes:
        - name: sail-minio
          persistentVolumeClaim:
            claimName: sail-minio
status: {}
