kubernetes/laravel.test-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: laravel-test
  name: laravel-test
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    io.kompose.service: laravel-test
status:
  loadBalancer: {}
